# cupli

./: .importlinter  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  README.ru.md  pyproject.toml  space.schema.json
.github/workflows/: ci.yml  coverage.yml  upload-previews.yml
docs/examples/: README.md
docs/examples/celery/: README.md  space.cupli.yaml
docs/examples/full-reference/: README.md  space.cupli.yaml
docs/examples/minimal/: README.md  space.cupli.yaml
docs/examples/multi-repo-shop/: .env.example  README.md  space.cupli.yaml
scripts/: generate_schema.py
src/cupli/: __init__.py  __main__.py  manage.py  version.py
src/cupli/cli/: __init__.py  _completion.py  _shortcuts.py  container.py  dashboard.py  diagnostics.py  exec.py  exports.py  git.py  hooks.py  lifecycle.py  mounts.py  root.py  workspace.py
src/cupli/core/: __init__.py  c3.py  cache.py  env_resolver.py  loader.py  parser.py  registry.py
src/cupli/domain/: __init__.py  consts.py  enums.py  errors.py  models.py  plan.py  runtime.py
src/cupli/services/: __init__.py  bridge_service.py  compose_service.py  exports_service.py  filter_service.py  git_service.py  hooks_service.py  host_sync.py  ide_setup_service.py  mount_targets.py  mounts_service.py  workspace_service.py
src/cupli/utils/: __init__.py  console.py  exceptions.py  fuzzy.py  git.py  json.py  lock.py  path.py  subprocess.py
tests/: conftest.py
tests/cli/: test_diagnostics.py  test_exec.py  test_exports.py  test_git.py  test_hooks.py  test_lifecycle.py  test_mounts.py  test_root.py  test_shortcut_registration.py  test_workspace.py
tests/fixtures/spaces/invalid/: bad_name.yaml  bad_version.yaml  bad_yaml_syntax.yaml  command_unknown_container.yaml  empty.yaml  missing_apps.yaml  mount_relative_exec_path.yaml  mount_unknown_host.yaml  unknown_base.yaml  unknown_dep.yaml
tests/fixtures/spaces/minimal/: space.cupli.yaml
tests/fixtures/spaces/with_bases/: space.cupli.yaml
tests/fixtures/spaces/with_mounts/: space.cupli.yaml
tests/integration/: test_lifecycle.py
tests/unit/: test_auto_register.py  test_bridge_service.py  test_c3.py  test_cache.py  test_completion.py  test_compose_service.py  test_env_resolver.py  test_excepthook.py  test_exceptions.py  test_exports_service.py  test_filter_service.py  test_fuzzy.py  test_git_service.py  test_git_utils.py  test_hooks_service.py  test_ide_setup_service.py  test_json_utils.py  test_loader.py  test_lock.py  test_models_coercion.py  test_models_host_features.py  test_mount_targets.py  test_mounts_service.py  test_parser.py  test_registry.py  test_runtime_context.py  test_shortcut_render.py  test_subprocess_utils.py  test_workspace_service.py
